Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73878

[REG] QtMultimedia not building without mir

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.14.0 Alpha
    • 5.14
    • Multimedia
    • None
    • Linux/X11
    • 6ece7be30accefcdebd6cb1cdfd51f0da83b627b (qt/qtmultimedia/dev)

    Description

      after the Mir support has been removed, multimedia does not build, failing with:

      make[3]: Entering directory '/local/home/paolo/qt5/bin/debug/qtmultimedia/src/gsttools'
      /local/home/paolo/qt5/bin/debug/qtbase/bin/qmake -o Makefile /local/home/paolo/qt5/qtmultimedia/src/gsttools/gsttools.pro -spec linux-g++ CONFIG+=qml_debug
      Project ERROR: Could not find feature mirclient.

      Attachments

        For Gerrit Dashboard: QTBUG-73878
        # Subject Branch Project Status CR V

        Activity

          People

            andysh Andy Shaw
            paangele Paolo Angelelli
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes